[metadata]
name = geogateway-django-app
version = 0.0.1
description = GeoGateway Django app

[options]
packages = find:
# Include data files as specified in MANIFEST.in
include_package_data = True
install_requires =
    django >= 3.2
    airavata-django-portal-sdk

[options.entry_points]
airavata.djangoapp =
    geogateway_django_app = geogateway_django_app.apps:GeogatewayDjangoAppConfig
